# web-video-downloader

./: .gitignore  README.md  build.ps1  build.sh  demo.py  main.py  pyproject.toml
capturer/: __init__.py  api.py  base.py  playwright.py
capturer/extension/: README.md  background.js  manifest.json  popup.html  popup.js
downloader/: __init__.py  base.py  dash.py  ffmpeg.py  hls.py  mp4.py
